# mcp-security-scanner

./: .gitignore  CONTRIBUTING.md  Dockerfile  INDEX.md  LICENSE  README.md  ROADMAP.md  SETUP_COMPLETE.md  pyproject.toml
.github/actions/mcp-scan/: action.yml
.github/workflows/: ci.yml
scripts/: verify_release_consistency.py
src/mcp_security_scanner/: __init__.py  cli.py  discovery.py  mutation.py  reporter.py
src/mcp_security_scanner/analyzers/: __init__.py  base.py  cross_tool.py  dynamic.py  escalation.py  injection.py  poisoning.py  static.py
src/mcp_security_scanner/reports/: __init__.py
src/mcp_security_scanner/transports/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_discovery.py  test_mutation.py  test_reporter.py  test_verify_release_consistency.py
tests/analyzers/: test_base.py  test_cross_tool.py  test_dynamic.py  test_escalation.py  test_injection.py  test_poisoning.py  test_static.py
tests/fixtures/: mock_mcp_server.py  mock_mcp_server_bad_json.py  mock_mcp_server_env.py  mock_mcp_server_init_error.py  mock_mcp_server_line.py  mock_mcp_server_mutated.py
