[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogulcanaydogan-mcp-security-scanner"
version = "0.1.9"
description = "Security scanner for Model Context Protocol (MCP) servers. Detects prompt injection, tool poisoning, capability escalation, and rug-pull attacks."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["mcp", "security", "scanner", "llm", "prompt-injection", "tool-poisoning"]
authors = [
    { name = "Ogulcan Aydogan", email = "dev@ogulcan.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=0.4.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.24.0",
    "boto3>=1.34.0",
    "google-cloud-secret-manager>=2.20.0",
    "azure-identity>=1.17.0",
    "azure-keyvault-secrets>=4.8.0",
    "hvac>=2.3.0",
    "kubernetes>=29.0.0",
    "oci>=2.126.0",
    "cryptography>=43.0.0",
    "keyring>=25.0.0",
    "aiofiles>=23.0.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "types-python-dateutil>=2.8.0",
    "types-aiofiles>=23.0.0",
    "types-Jinja2>=2.11.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocs-gen-files>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/ogulcanaydogan/mcp-security-scanner"
Documentation = "https://mcp-security-scanner.dev"
Repository = "https://github.com/ogulcanaydogan/mcp-security-scanner.git"
"Bug Tracker" = "https://github.com/ogulcanaydogan/mcp-security-scanner/issues"
"Change Log" = "https://github.com/ogulcanaydogan/mcp-security-scanner/releases"

[project.scripts]
mcp-scan = "mcp_security_scanner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_security_scanner*"]

[tool.setuptools.package-data]
mcp_security_scanner = ["templates/**/*.html", "py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "dist",
    "build",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "UP042",   # StrEnum migration deferred to a later sprint
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_security_scanner"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["RUF043"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_any_unimported = false
disallow_any_generics = false
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--cov=mcp_security_scanner",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--asyncio-mode=auto",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore:.*BaseSubprocessTransport.__del__.*:pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
source = ["mcp_security_scanner"]
omit = [
    "*/site-packages/*",
    "*/distutils/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
